fix(evidence): use Android-compatible NIO path construction